<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AktivitasOlahragaActivity">
    <ImageButton
        android:id="@+id/imgBackaktivitas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:minWidth="32dp"
        android:minHeight="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="217dp"
        android:layout_height="175dp"
        android:layout_marginStart="9dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/titleforcheck"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBackaktivitas" />

    <TextView
        android:id="@+id/textViewpenurunanberat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/questionsolahraga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/lanjut"
        app:backgroundTint="#0F40D5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupOptions" />
    <RadioGroup
        android:id="@+id/radioGroupOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewpenurunanberat">

        <RadioButton
            android:id="@+id/radioButtontidakpernah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tidakpernah" />

        <RadioButton
            android:id="@+id/radioButtonjarang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jarang" />

        <RadioButton
            android:id="@+id/radioButtonsering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sering"/>

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>